@@ -1,5 +1,10 @@
+FROM maven:3.6.0-jdk-8-alpine as builder
+COPY . .
+# Here we skip tests to save time, because if this image is being built - tests have already passed...
+RUN mvn install -DskipTests
+
 FROM openjdk:8-jre-alpine
 
-COPY target/trackfind-*.jar trackfind.jar
+COPY --from=builder /target/*-SNAPSHOT.jar trackfind.jar
 
-CMD ["java", "-jar", "trackfind.jar", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"]
+CMD ["java", "-jar", "trackfind.jar"]
